﻿You can now transmutate hardmode bars into their variants, like from Cobalt until Titanium, using the Alchemy Table.
	For the transmutation, you need 2 bars of the tier you want to convert, and a pixie dust, to get a bar of the other tier.
Crafting item is now affected by luck.
	Lucky Strike does:
		If It's a weapon, gives you a guaranted good reforge prefix.
		If it's not, gives you an extra of that item.
	Very Lucky Strike does:
		If It's a weapon, gives you the best possible reforge prefix for that weapon.
		If it's not, gives you 7 more of that item.
Added Ascension RPG Game Mode.
Expanded the description of the game modes.
Regular RPG Mode
	Nerfed exp given by Dye plants.
Removed the Luck Up! text from breaking tiles.