@@ -26,6 +26,7 @@ namespace NExperience
 
         public override void KillTile(int i, int j, int type, ref bool fail, ref bool effectOnly, ref bool noItem)
         {
+            if (Main.gameMenu) return;
             if (fail)
                 return;
             if (RecentlyBrokenTiles.Contains(type))
@@ -66,8 +67,8 @@ namespace NExperience
             foreach (int p in PlayerMod.GetPlayerTeamMates(NearestToTile))
             {
                 PlayerMod pm = Main.player[p].GetModPlayer<PlayerMod>();
-				if(pm == null)
-					continue;
+				//if(pm == null)
+				//	continue;
                 int Exp = pm.GetGameModeInfo.Base.GetDigExp(type);
                 if (Exp > 0)
                     pm.GetExp(Exp, ExpReceivedPopText.ExpSource.Digging, false);
@@ -75,19 +76,15 @@ namespace NExperience
                 {
                     case Terraria.ID.TileID.Pots:
                         pm.ClayPotMagicFindPoints++;
-                        //CombatText.NewText(new Rectangle(i * 16, j * 16, 8, 8), Color.Green, "Luck Up!", true);
                         break;
                     case Terraria.ID.TileID.DemonAltar:
                         pm.AltarMagicFindPoints++;
-                        //CombatText.NewText(new Rectangle(i * 16, j * 16, 8, 8), Color.Green, "Luck Up!", true);
                         break;
                     case Terraria.ID.TileID.ShadowOrbs:
                         pm.OrbMagicFindPoints++;
-                        //CombatText.NewText(new Rectangle(i * 16, j * 16, 8, 8), Color.Green, "Luck Up!", true);
                         break;
                     case Terraria.ID.TileID.Heart:
                         pm.LifeCrystalMagicPoints++;
-                        //CombatText.NewText(new Rectangle(i * 16, j * 16, 8, 8), Color.Green, "Luck Up!", true);
                         break;
                 }
             }
