@@ -1,5 +1,5 @@
 author = Nakano15
-version = 1.3.12.1
+version = 1.3.13
 displayName = NExperience Mod
 homepage = https://forums.terraria.org/index.php?threads/nexperience-mod-leveling-mod-for-terraria.83122/
 hideCode = false
